# hsapi-client

./: .gitignore  .python-version  README.md  headscale.openapi.json  main.py  pyproject.toml
headscale_api_client/: __init__.py  apikeys.py  config.py  model.py  nodes.py  routes.py  schemas.py  users.py
headscale_api_client/schemas/: HeadscaleServiceSetTagsBody.py  __init__.py  protobufAny.py  rpcStatus.py  v1ApiKey.py  v1BackfillNodeIPsResponse.py  v1CreateApiKeyRequest.py  v1CreateApiKeyResponse.py  v1CreatePreAuthKeyRequest.py  v1CreatePreAuthKeyResponse.py  v1CreateUserRequest.py  v1CreateUserResponse.py  v1DebugCreateNodeRequest.py  v1DebugCreateNodeResponse.py  v1DeleteApiKeyResponse.py  v1DeleteNodeResponse.py  v1DeleteRouteResponse.py  v1DeleteUserResponse.py  v1DisableRouteResponse.py  v1EnableRouteResponse.py  v1ExpireApiKeyRequest.py  v1ExpireApiKeyResponse.py  v1ExpireNodeResponse.py  v1ExpirePreAuthKeyRequest.py  v1ExpirePreAuthKeyResponse.py  v1GetNodeResponse.py  v1GetNodeRoutesResponse.py  v1GetRoutesResponse.py  v1GetUserResponse.py  v1ListApiKeysResponse.py  v1ListNodesResponse.py  v1ListPreAuthKeysResponse.py  v1ListUsersResponse.py  v1MoveNodeRequest.py  v1MoveNodeResponse.py  v1Node.py  v1PreAuthKey.py  v1RegisterMethod.py  v1RegisterNodeResponse.py  v1RenameNodeResponse.py  (+4 more)
hsapi/: pyproject.toml
hsapi-client/: TODO.md  pyproject.toml
hsapi-client/hsapi_client/: __init__.py  apikeys.py  model.py  nodes.py  preauthkeys.py  routes.py  schemas.py
hsapi/hsapi/: config.py  model.py  preauthkeys.py  (+2 more)
hsapi_client/: nodes.py  routes.py  schemas.py
