[tool.poetry]
name = "hsapi-client"
version = "0.9.4"
description = "Headscale API client"
authors = ["Andrea Mistrali <andrea@mistrali.pw>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
